[gd_scene load_steps=7 format=3 uid="uid://cw17j3fqx4p6x"]

[ext_resource type="Script" path="res://ui/main_menu/MainMenuButton.gd" id="1_celtk"]
[ext_resource type="AudioStream" uid="uid://ibiqxk0peqso" path="res://assets/sfx/ui_point.ogg" id="2_b6hde"]
[ext_resource type="AudioStream" uid="uid://dq7uo6vdyyfl1" path="res://assets/sfx/ui_select.ogg" id="3_gukf3"]

[sub_resource type="Animation" id="Animation_7sfwi"]
resource_name = "blink"
length = 0.4
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0.733333, 0, 1), Color(1, 1, 1, 1), Color(1, 0.733333, 0, 1), Color(1, 1, 1, 1), Color(1, 0.733333, 0, 1), Color(1, 1, 1, 1), Color(1, 0.733333, 0, 1), Color(1, 1, 1, 1), Color(1, 0.733333, 0, 1), Color(1, 1, 1, 1), Color(1, 0.733333, 0, 1)]
}

[sub_resource type="Animation" id="Animation_4elm5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5mwyc"]
_data = {
"RESET": SubResource("Animation_4elm5"),
"blink": SubResource("Animation_7sfwi")
}

[node name="MainMenuButton" type="Button"]
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
flat = true
script = ExtResource("1_celtk")

[node name="PointSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_b6hde")

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_gukf3")

[node name="Blinker" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5mwyc")
}

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
